Revert "Merge branch 'develop' into release1.0.0.0"
This reverts commit b41cd9097fc7b975316062d49cebb73714740938, reversing
changes made to 17ca3d9a53a0dc4ce1ed0018ac651c027488539d.